# HST_WFC3_UVIS_G280_sim

./: H23_ETC.UVIS_10nm_transmission_sim.csv  H23_ETC.UVIS_20nm_transmission_sim.csv  H23_ETC.UVIS_30nm_transmission_sim.csv  H23_ETC.csv  H23_ETC_237s.UVIS_10nm_transmission_sim.csv  H23_ETC_237s.UVIS_20nm_transmission_sim.csv  H23_ETC_237s.csv  H41_ETC.UVIS_10nm_transmission_sim.csv  H41_ETC.UVIS_10nm_transmission_sim.txt  H41_ETC.csv  H41_ETC_default.UVIS_10nm_transmission_sim.csv  H41_ETC_default.UVIS_20nm_transmission_sim.csv  H41_ETC_default.UVIS_30nm_transmission_sim.csv  H41_ETC_default.csv  H41_ETC_default_1s.UVIS_10nm_transmission_sim.csv  H41_ETC_default_1s.csv  Simulator_comparison_to_Wakeford2020.ipynb  UVIS_precision_calculator.py  env.yml  estimate_phase.jl  estimate_phase.jl.html  estimate_precision.ipynb  planets.csv  pyproject.toml  tspec_JWST.csv  tspec_c.txt
data/: 0_IMACS.txt  12_Orbits.txt  15_Orbits.txt  9_Orbits.txt
notebooks/: retrievals.jl
