[tool.poetry]
name = "hst"
version = "0.1.0"
description = ""
authors = ["Ian Weaver <iweaver@mailbox.org>"]

[tool.poetry.dependencies]
python = "^3.9"
astropy = "^5.0.2"
matplotlib = "^3.5.1"
notebook = "^6.4.10"
numpy = "^1.22.3"
pandas = "^1.4.1"
seaborn = "^0.11.2"
spectres = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
